# customer-churn-clv-online-retail-ii

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_audit.ipynb  02_cleaning_feature_engineering.ipynb  03_modeling_churn.ipynb  04_value_proxy_and_actions.ipynb
reports/: customer_action_list.csv
scripts/: run_04.py
src/: __init__.py  cleaning.py  config.py  evaluate.py  features.py  io.py  modeling.py  utils.py
